fix overflow issue

--- a/_sass/hero.scss
+++ b/_sass/hero.scss
@@ -10,7 +10,6 @@
   }
 
   #hero-gradient {
-    width: 100vw;
     min-height: 100vh;
 
     background: black;
